<resources>
    <string name="app_name">医疗助手</string>


    <string name="actionbar_title_search">搜索</string>
    <string name="actionbar_title_add">添加</string>
    <string name="actionbar_title_commit">确定</string>

    <string name="btn_entry">立即体验</string>

    <!-- slide menu -->
    <string name="menu_rss">信息管理</string>
    <string name="menu_opensoft">关于</string>
    <string name="menu_blog">热点资讯</string>
    <string name="menu_quests">消息</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>
    <string name="gitapp">Git项目地址</string>

    <!-- navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- qucik option -->
    <string name="quick_option_text">写入</string>
    <string name="quick_option_album">读取</string>
    <string name="quick_option_photo">清除</string>

    <string name="str_home">主页</string>
    <string name="str_messages">消息</string>
    <string name="str_explore">发现</string>
    <string name="str_mine">我</string>

    <!--title -->
    <string name="str_dailycare">日常护理</string>
    <string name="str_topnews">头条资讯</string>
    <string name="str_mallrec">商城推荐</string>
    <string name="str_more">更多</string>
    <string name="str_info">病房信息</string>
    <string name="str_daily">日常护理</string>


    <!-- explore menu -->
    <string name="active">护士圈</string>
    <string name="activities">活动</string>
    <string name="scan">扫一扫</string>
    <string name="find_oscer">找人</string>
    <string name="shake">摇一摇</string>

    <!-- Mine menu-->
    <string name="collection">收藏</string>
    <string name="account">账户管理</string>
    <string name="setting">设置</string>
    <string name="recommend">意见反馈</string>
    <string name="avatar_editor_success">头像更新成功</string>
    <string name="avatar_editor_failure">头像更新失败</string>

    <!--error layout -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_no_data">暂无内容</string>

    <!--login-->
    <string name="text_keep_password">记住密码</string>
    <string name="str_login">登录</string>
    <string name="hint_phone_num">手机号</string>
    <string name="hint_passwd">密码</string>
    <string name="text_login">登录</string>
    <string name="text_find_password">忘记密码?</string>
    <string name="text_now_login">正在登录…</string>

    <!-- change passwd-->
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_password_again">再次输入新密码</string>
    <string name="text_editor_password">重置密码</string>

    <!--find passwd-->
    <string name="text_setting_password">重置密码</string>
    <string name="text_phone">请输入登记时的手机号码</string>
    <string name="str_find_passwd">找回密码</string>
    <string name="text_reset_sms_code">重新发送验证码</string>
    <string name="text_tost_empty">输入框不能为空</string>
    <string name="text_sms_code_reset_successfully">验证码发送成功</string>
    <string name="text_two_input_not_consistent">两次输入的密码不一致</string>
    <string name="reset_successfully">重置密码成功</string>
    <string name="reset_failed">重置密码失败</string>

    <!--settings-->
    <string name="exit">退出账号</string>
    <string name="change_passwd">修改密码</string>
    <string name="about_me">关于我</string>
    <string name="str_settings">设置</string>
    <string name="str_change_passwd">密码修改</string>

    <!--dialog exit-->
    <string name="dialog_message">确定退出?</string>
    <string name="dialog_del_message">确定删除?</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>

    <!--ward item-->
    <string name="roomnum">房间号：</string>
    <string name="category">科 目：</string>
    <string name="doctor">医 生：</string>
    <string name="nurse">护 士：</string>
    <string name="patientnum">病人数：</string>
    <string name="location">位 置：</string>

    <!--patients info-->
    <string name="str_patients">病人详情</string>
    <string name="str_define">诊 断：</string>
    <string name="patient_name">姓 名：</string>
    <string name="patient_gender">性 别：</string>
    <string name="patient_phone">电 话：</string>
    <string name="patient_age">年 龄：</string>
    <string name="patient_doctor">医 生：</string>
    <string name="patient_nurse">护 士：</string>
    <string name="patient_entrytime">就 诊：</string>
    <string name="patient_code">住院号：</string>
    <string name="patient_pathology">诊 断：</string>
    <string name="patient_judge">有无过往病史?：</string>
    <string name="patient_record">病史记录：</string>
    <string name="patient_detail">基本情况：</string>

    <!--nfc-->
    <string name="start_write">开始写入</string>
    <string name="patient_id">请输入病人住院号</string>
    <string name="nfc_writer">信息写入</string>
    <string name="nfc_reader">信息读取</string>
    <string name="hint">请选择类型</string>
    <string name="query">查询详情</string>


    <!-- dailycare-->
    <string name="dailycare_loding">正在加载…</string>
    <string name="dailycare_nodata">没有记录</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="new_event">新建事件</string>
    <string name="update_event">编辑事件</string>
    <string name="dailycare_title">标题</string>
    <string name="dailycare_object">对象</string>
    <string name="dailycare_location">位置</string>
    <string name="dailycare_time">时间</string>
    <string name="dailycare_remind">提醒</string>
    <string name="dailycare_time_detail">2017-3-20 16:42</string>
    <string name="dailycare_remind_detail">无</string>
    <string name="dailycare_detail">详情</string>
    <string name="none">无</string>
    <string name="event_detail">护理详情</string>
    <string name="event_delete">删除</string>
    <string name="event_share">分享</string>
    <string name="event_edit">编辑</string>

    <!--date time picker-->
    <string name="label_datetime_dialog">时间选择</string>
    <string name="positive_button_datetime_picker">确定</string>
    <string name="negative_button_datetime_picker">取消</string>
    <string name="dialog_title">添加提醒</string>

    <!-- abount me -->
    <string name="author">作者：</string>
    <string name="name">余学海</string>
    <string name="school">学校：</string>
    <string name="school_name">重庆邮电大学</string>
    <string name="academy">学院：</string>
    <string name="academy_name">自动化学院</string>
    <string name="email">邮件：</string>
    <string name="email_name">594643219@qq.com</string>
    <string name="blog">个人主页：</string>
    <string name="blog_address">kidsea.github.io</string>

</resources>
