<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e2e2e2"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/menu_item_quests"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:background="@drawable/drawer_menu_icon_quest"
            android:contentDescription="@null" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:gravity="center"
            android:text="@string/menu_quests" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d2d2d2" />

    <LinearLayout
        android:id="@+id/menu_item_opensoft"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:background="@drawable/drawer_menu_icon_opensoft"
            android:contentDescription="@null" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/menu_opensoft" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d2d2d2" />

    <LinearLayout
        android:id="@+id/menu_item_blog"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:background="@drawable/drawer_menu_icon_blog"
            android:contentDescription="@null" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/menu_blog" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d2d2d2" />
    
    <LinearLayout
        android:id="@+id/menu_item_gitapp"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:background="@drawable/drawer_menu_icon_gitapp"
            android:contentDescription="@null" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/gitapp" />
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d2d2d2" />

    <LinearLayout
        android:id="@+id/menu_item_rss"
        style="@style/MenuItemLayoutStyle"
        android:visibility="visible" >

        <ImageView
            style="@style/MenuItemImageViewStyle"
            android:background="@drawable/drawer_menu_icon_rss"
            android:contentDescription="@null" />

        <TextView
            style="@style/MenuItemTextViewStyle"
            android:text="@string/menu_rss" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d2d2d2"
        android:visibility="gone" />

</LinearLayout>