<?xml version="1.0" encoding="utf-8"?>
<com.example.yuxuehai.medicalassistan.widget.CustomerScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/rl_active"
            style="@style/option_item_rl"
        >

            <ImageView
                style="@style/option_item_img"
                android:layout_marginRight="@dimen/space_10"
                android:background="@drawable/icon_explore_friends"
                android:contentDescription="@null"/>

            <TextView
                style="@style/option_item_text"
                android:text="@string/active"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_20"
            android:background="@color/graywhite"/>


        <LinearLayout
            android:id="@+id/rl_activities"
            style="@style/option_item_rl">

            <ImageView
                style="@style/option_item_img"
                android:background="@drawable/icon_explore_event"
                android:contentDescription="@null"/>

            <TextView
                style="@style/option_item_text"
                android:text="@string/activities"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="@color/graywhite"
        />

        <LinearLayout
            android:id="@+id/rl_find_osc"
            style="@style/option_item_rl"
        >

            <ImageView
                style="@style/option_item_img"
                android:layout_marginRight="@dimen/space_10"
                android:background="@drawable/icon_explore_finduser"
                android:contentDescription="@null"/>

            <TextView
                style="@style/option_item_text"
                android:text="@string/find_oscer"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_20"
            android:background="@color/graywhite"/>

        <LinearLayout
            android:id="@+id/rl_scan"
            style="@style/option_item_rl">

            <ImageView
                style="@style/option_item_img"
                android:background="@drawable/icon_explore_scan"
                android:contentDescription="@null"/>

            <TextView
                style="@style/option_item_text"
                android:text="@string/scan"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="@color/graywhite"/>

        <LinearLayout
            android:id="@+id/rl_shake"
            style="@style/option_item_rl">

            <ImageView
                style="@style/option_item_img"
                android:background="@drawable/icon_explore_shake"
                android:contentDescription="@null"/>

            <TextView
                style="@style/option_item_text"
                android:text="@string/shake"/>
        </LinearLayout>

    </LinearLayout>


</com.example.yuxuehai.medicalassistan.widget.CustomerScrollView>