<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/w_match_h_match"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/acbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_mytb"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme_PopupMenu">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/space_10">

        <com.example.yuxuehai.medicalassistan.widget.ClearEditText
            android:id="@+id/et_now_pass"
            style="@style/w_300dp_h_wrap"
            android:backgroundTint="@color/main_green"
            android:hint="@string/text_now_password"
            android:inputType="textPassword"
            android:textColor="@color/main_gray"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp"/>

        <com.example.yuxuehai.medicalassistan.widget.ClearEditText
            android:id="@+id/et_new_pass"
            style="@style/w_300dp_h_wrap"
            android:backgroundTint="@color/main_green"
            android:hint="@string/text_new_password"
            android:inputType="textPassword"
            android:textColor="@color/main_gray"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp"/>

        <com.example.yuxuehai.medicalassistan.widget.ClearEditText
            android:id="@+id/et_new_password"
            style="@style/w_300dp_h_wrap"
            android:backgroundTint="@color/main_green"
            android:hint="@string/text_password_again"
            android:inputType="textPassword"
            android:textColor="@color/main_gray"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp"/>

        <com.example.yuxuehai.medicalassistan.widget.RoundButton
            android:id="@+id/btn_change_password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/space_10"
            android:background="@color/main_green"
            android:text="@string/text_editor_password"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>