<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/set_pop"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
     <LinearLayout
        android:id="@+id/ll_option_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ly_quick_option_text"
                style="@style/quick_option_item" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/quickoption_icon_text_selector" />

                <TextView
                    style="@style/quick_option_item_text"
                    android:text="@string/quick_option_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_quick_option_album"
                style="@style/quick_option_item" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/quickoption_icon_album_selector" />

                <TextView
                    style="@style/quick_option_item_text"
                    android:text="@string/quick_option_album" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_quick_option_clear"
                style="@style/quick_option_item" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:src="@drawable/quickoption_icon_photo_selector" />

                <TextView
                    style="@style/quick_option_item_text"
                    android:text="@string/quick_option_photo" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_option_container"
        android:background="@color/list_item_background_normal"
        android:gravity="center"
        android:padding="10dip"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@null"
            android:focusable="false"
            android:src="@drawable/btn_quickoption_route" />
    </LinearLayout>   

</RelativeLayout>
